--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^0.14.3",
     "redux": "^4.1.0"
   },
   "devDependencies": {
