--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-screens": "^3.3.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-vector-icons": "^8.1.0",
     "redux": "^4.1.0"
   },
   "devDependencies": {
